(add new changes on top of this file)

06-08-03 Metaways  <info@metaways.de>

	* Initial release