@@ -1,1 +1,1 @@
-a:4:{s:4:"save";a:3:{s:13:"extension_key";s:13:"user_anwaelte";s:18:"print_wop_comments";s:1:"0";s:15:"overwrite_files";a:15:{i:0;s:9:"ChangeLog";i:1;s:10:"README.txt";i:2;s:12:"ext_icon.gif";i:3;s:17:"ext_localconf.php";i:4;s:14:"ext_tables.php";i:5;s:13:"locallang.php";i:6;s:16:"locallang_db.php";i:7;s:19:"doc/wizard_form.dat";i:8;s:20:"doc/wizard_form.html";i:9;s:14:"pi1/ce_wiz.gif";i:10;s:31:"pi1/class.user_anwaelte_pi1.php";i:11;s:39:"pi1/class.user_anwaelte_pi1_wizicon.php";i:12;s:13:"pi1/clear.gif";i:13;s:17:"pi1/locallang.php";i:14;s:24:"pi1/static/editorcfg.txt";}}s:6:"emconf";a:1:{i:1;a:7:{s:5:"title";s:5:"Liste";s:11:"description";s:12:"Anwaltsliste";s:8:"category";s:6:"plugin";s:5:"state";s:5:"alpha";s:12:"dependencies";s:0:"";s:6:"author";s:8:"Metaways";s:12:"author_email";s:16:"info@metaways.de";}}s:6:"fields";a:0:{}s:2:"pi";a:1:{i:1;a:8:{s:5:"title";s:0:"";s:13:"plus_user_obj";s:1:"0";s:23:"plus_not_staticTemplate";s:1:"0";s:7:"addType";s:9:"list_type";s:8:"plus_wiz";s:1:"1";s:20:"plus_wiz_description";s:0:"";s:8:"tag_name";s:0:"";s:12:"plus_user_ex";s:1:"0";}}}
+a:4:{s:4:"save";a:3:{s:13:"extension_key";s:13:"user_kontakt2tine";s:18:"print_wop_comments";s:1:"0";s:15:"overwrite_files";a:15:{i:0;s:9:"ChangeLog";i:1;s:10:"README.txt";i:2;s:12:"ext_icon.gif";i:3;s:17:"ext_localconf.php";i:4;s:14:"ext_tables.php";i:5;s:13:"locallang.php";i:6;s:16:"locallang_db.php";i:7;s:19:"doc/wizard_form.dat";i:8;s:20:"doc/wizard_form.html";i:9;s:14:"pi1/ce_wiz.gif";i:10;s:31:"pi1/class.user_kontakt2tine_pi1.php";i:11;s:39:"pi1/class.user_anwaelte_pi1_wizicon.php";i:12;s:13:"pi1/clear.gif";i:13;s:17:"pi1/locallang.php";i:14;s:24:"pi1/static/editorcfg.txt";}}s:6:"emconf";a:1:{i:1;a:7:{s:5:"title";s:5:"Liste";s:11:"description";s:12:"Kontakt2Tine";s:8:"category";s:6:"plugin";s:5:"state";s:5:"alpha";s:12:"dependencies";s:0:"";s:6:"author";s:8:"Metaways";s:12:"author_email";s:16:"info@metaways.de";}}s:6:"fields";a:0:{}s:2:"pi";a:1:{i:1;a:8:{s:5:"title";s:0:"";s:13:"plus_user_obj";s:1:"0";s:23:"plus_not_staticTemplate";s:1:"0";s:7:"addType";s:9:"list_type";s:8:"plus_wiz";s:1:"1";s:20:"plus_wiz_description";s:0:"";s:8:"tag_name";s:0:"";s:12:"plus_user_ex";s:1:"0";}}}
