@@ -7,6 +7,6 @@
 
 <body>
 
-	<table border=0 cellpadding=2 cellspacing=2><tr bgColor=""><td><strong><span style="font-family:verdana,arial,sans-serif; font-size:10px;">General info</span></strong></td></tr><tr bgColor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;">Enter general information about the extension here: Title, description, category, author...</span></td></tr><tr><td></td></tr><tr bgColor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><strong>Title:</strong><BR><a name="260dbfdff6"></a><input type="text" name="kickstarter[wizArray_upd][emconf][1][title]" value="Liste" style="width:200px;" onChange="setFormAnchorPoint('260dbfdff6');" title="WOP: [emconf][1][title]"></span></td></tr><tr bgColor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><strong>Description:</strong><BR><a name="e9cba6944a"></a><input type="text" name="kickstarter[wizArray_upd][emconf][1][description]" value="Anwaltsliste" style="width:200px;" onChange="setFormAnchorPoint('e9cba6944a');" title="WOP: [emconf][1][description]"></span></td></tr><tr bgColor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><strong>Category:</strong><BR><a name="b46008f89f"></a><select name="kickstarter[wizArray_upd][emconf][1][category]" onChange="setFormAnchorPoint('b46008f89f');" title="WOP: [emconf][1][category]"><option value=""></option><option value="fe">Frontend</option><option value="plugin" SELECTED>Frontend Plugins</option><option value="be">Backend</option><option value="module">Backend Modules</option><option value="services">Services</option><option value="example">Examples</option><option value="misc">Miscellaneous</option><option value="templates">Templates</option><option value="doc">Documentation</option></select></span></td></tr><tr bgColor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><strong>State</strong><BR><a name="dbd328a5a5"></a><select name="kickstarter[wizArray_upd][emconf][1][state]" onChange="setFormAnchorPoint('dbd328a5a5');" title="WOP: [emconf][1][state]"><option value="alpha" SELECTED>Alpha (Very initial development)</option><option value="beta">Beta (Under current development, should work partly)</option><option value="stable">Stable (Stable and used in production)</option><option value="experimental">Experimental (Nobody knows if this is going anywhere yet...)</option><option value="test">Test (Test extension, demonstrates concepts etc.)</option></select></span></td></tr><tr bgColor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><strong>Dependencies (comma list of extkeys):</strong><BR><a name="ce30f2d5ba"></a><input type="text" name="kickstarter[wizArray_upd][emconf][1][dependencies]" value="" style="width:200px;" onChange="setFormAnchorPoint('ce30f2d5ba');" title="WOP: [emconf][1][dependencies]"></span></td></tr><tr bgColor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><strong>Author Name:</strong><BR><a name="5317cdfcff"></a><input type="text" name="kickstarter[wizArray_upd][emconf][1][author]" value="Metaways" style="width:200px;" onChange="setFormAnchorPoint('5317cdfcff');" title="WOP: [emconf][1][author]"></span></td></tr><tr bgColor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><strong>Author email:</strong><BR><a name="58289f4384"></a><input type="text" name="kickstarter[wizArray_upd][emconf][1][author_email]" value="info@metaways.de" style="width:200px;" onChange="setFormAnchorPoint('58289f4384');" title="WOP: [emconf][1][author_email]"></span></td></tr></table><HR><table border=0 cellpadding=2 cellspacing=2><tr bgColor=""><td><strong><span style="font-family:verdana,arial,sans-serif; font-size:10px;">Frontend Plugins</span></strong></td></tr><tr bgColor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;">Create frontend plugins. Plugins are web applications running on the website itself (not in the backend of TYPO3). The default guestbook, message board, shop, rating feature etc. are examples of plugins.</span></td></tr><tr><td></td></tr><tr bgColor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><strong>Enter a title for the plugin:</strong><BR><a name="c040cc394f"></a><input type="text" name="kickstarter[wizArray_upd][pi][1][title]" value="" style="width:200px;" onChange="setFormAnchorPoint('c040cc394f');" title="WOP: [pi][1][title]"> [English]</span></td></tr><tr bgColor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><a name="51abb93902"></a><input type="hidden" name="kickstarter[wizArray_upd][pi][1][plus_user_obj]" value="0"><input type="checkbox" name="kickstarter[wizArray_upd][pi][1][plus_user_obj]" value="1" onClick="setFormAnchorPoint('51abb93902');" title="WOP: [pi][1][plus_user_obj]">USER cObjects are cached. Make it a non-cached USER_INT instead<BR></span></td></tr><tr bgColor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><a name="69574a69dc"></a><input type="hidden" name="kickstarter[wizArray_upd][pi][1][plus_not_staticTemplate]" value="0"><input type="checkbox" name="kickstarter[wizArray_upd][pi][1][plus_not_staticTemplate]" value="1" onClick="setFormAnchorPoint('69574a69dc');" title="WOP: [pi][1][plus_not_staticTemplate]">Enable this option if you want the TypoScript code to be set by default. Otherwise the code will go into a static template file which must be included in the template record (recommended is to <em>not</em> set this option).<BR></span></td></tr><tr bgColor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><a name="15c9a33e8f"></a><input type="radio" name="kickstarter[wizArray_upd][pi][1][addType]" value="list_type" CHECKED onClick="setFormAnchorPoint('15c9a33e8f');" title="WOP: [pi][1][addType]"><strong>Add to 'Insert Plugin' list in Content Elements</strong><BR><blockquote>Most frontend plugins should be added to the Plugin list of Content Element type 'Insert Plugin'. This is what happens with most other plugins you know of.<BR><img src="../../../../typo3/ext/kickstarter/res/pi_pi.png" width="333" height="293" align="center" vspace=5 border=1 style="border:solid 1px;"><BR><BR><a name="19e5106d54"></a><input type="hidden" name="kickstarter[wizArray_upd][pi][1][plus_wiz]" value="0"><input type="checkbox" name="kickstarter[wizArray_upd][pi][1][plus_wiz]" value="1" CHECKED onClick="setFormAnchorPoint('19e5106d54');" title="WOP: [pi][1][plus_wiz]">Add icon to 'New Content Element' wizard:<BR><img src="../../../../typo3/ext/kickstarter/res/pi_cewiz.png" width="276" height="145" align="center" vspace=5 border=1 style="border:solid 1px;"><BR>Write a description for the entry (if any):<BR><a name="cd406c53b3"></a><input type="text" name="kickstarter[wizArray_upd][pi][1][plus_wiz_description]" value="" style="width:200px;" onChange="setFormAnchorPoint('cd406c53b3');" title="WOP: [pi][1][plus_wiz_description]"> [English]</blockquote></span></td></tr><tr bgColor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><a name="15c9a33e8f"></a><input type="radio" name="kickstarter[wizArray_upd][pi][1][addType]" value="textbox" onClick="setFormAnchorPoint('15c9a33e8f');" title="WOP: [pi][1][addType]"><strong>Add as a 'Textbox' type</strong><BR><blockquote>The Textbox Content Element is not very common but has a confortable set of fields: Bodytext and image upload.<BR><img src="../../../../typo3/ext/kickstarter/res/pi_textbox.png" width="333" height="212" align="center" vspace=5 border=1 style="border:solid 1px;"><BR></blockquote></span></td></tr><tr bgColor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><a name="15c9a33e8f"></a><input type="radio" name="kickstarter[wizArray_upd][pi][1][addType]" value="menu_sitemap" onClick="setFormAnchorPoint('15c9a33e8f');" title="WOP: [pi][1][addType]"><strong>Add as a 'Menu/Sitemap' item</strong><BR><blockquote>Adds the plugin to the Menu/Sitemap list. Use this if your plugin is a list of links to pages or elements on the website. An alternative sitemap? Or some special kind of menu in a special design?<BR><img src="../../../../typo3/ext/kickstarter/res/pi_menu_sitemap.png" width="333" height="245" align="center" vspace=5 border=1 style="border:solid 1px;"><BR></blockquote></span></td></tr><tr bgColor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><a name="15c9a33e8f"></a><input type="radio" name="kickstarter[wizArray_upd][pi][1][addType]" value="ce" onClick="setFormAnchorPoint('15c9a33e8f');" title="WOP: [pi][1][addType]"><strong>Add as a totally new Content Element type</strong><BR><blockquote>You can also take the plunge into a whole new content element type! Scarry eh?<BR><img src="../../../../typo3/ext/kickstarter/res/pi_ce.png" width="333" height="285" align="center" vspace=5 border=1 style="border:solid 1px;"><BR></blockquote></span></td></tr><tr bgColor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><a name="15c9a33e8f"></a><input type="radio" name="kickstarter[wizArray_upd][pi][1][addType]" value="header" onClick="setFormAnchorPoint('15c9a33e8f');" title="WOP: [pi][1][addType]"><strong>Add as a new header type</strong><BR><blockquote>Finally you might insert a new header type here:<BR><img src="../../../../typo3/ext/kickstarter/res/pi_header.png" width="333" height="258" align="center" vspace=5 border=1 style="border:solid 1px;"><BR></blockquote></span></td></tr><tr bgColor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><a name="15c9a33e8f"></a><input type="radio" name="kickstarter[wizArray_upd][pi][1][addType]" value="typotags" onClick="setFormAnchorPoint('15c9a33e8f');" title="WOP: [pi][1][addType]"><strong>Processing of userdefined tag</strong><BR><blockquote>If you wish the plugin to process content from a userdefined tag in Content Element text-fields, enter the tagname here. Eg. if you wish the tags &lt;mytag&gt;This is the content&lt;/mytag&gt; to be your userdefined tags, just enter 'mytag' in this field (lowercase a-z, 0-9 and underscore):<BR><a name="b642236ba9"></a><input type="text" name="kickstarter[wizArray_upd][pi][1][tag_name]" value="" style="width:200px;" onChange="setFormAnchorPoint('b642236ba9');" title="WOP: [pi][1][tag_name]"></blockquote></span></td></tr><tr bgColor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><a name="15c9a33e8f"></a><input type="radio" name="kickstarter[wizArray_upd][pi][1][addType]" value="includeLib" onClick="setFormAnchorPoint('15c9a33e8f');" title="WOP: [pi][1][addType]"><strong>Just include library</strong><BR><blockquote>In this case your library is just included when pages are rendered.<BR><BR><a name="d2fd54b86b"></a><input type="hidden" name="kickstarter[wizArray_upd][pi][1][plus_user_ex]" value="0"><input type="checkbox" name="kickstarter[wizArray_upd][pi][1][plus_user_ex]" value="1" onClick="setFormAnchorPoint('d2fd54b86b');" title="WOP: [pi][1][plus_user_ex]">Provide TypoScript example for USER cObject in 'page.1000'<BR></blockquote></span></td></tr></table>
+	<table border=0 cellpadding=2 cellspacing=2><tr bgColor=""><td><strong><span style="font-family:verdana,arial,sans-serif; font-size:10px;">General info</span></strong></td></tr><tr bgColor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;">Enter general information about the extension here: Title, description, category, author...</span></td></tr><tr><td></td></tr><tr bgColor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><strong>Title:</strong><BR><a name="260dbfdff6"></a><input type="text" name="kickstarter[wizArray_upd][emconf][1][title]" value="Liste" style="width:200px;" onChange="setFormAnchorPoint('260dbfdff6');" title="WOP: [emconf][1][title]"></span></td></tr><tr bgColor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><strong>Description:</strong><BR><a name="e9cba6944a"></a><input type="text" name="kickstarter[wizArray_upd][emconf][1][description]" value="" style="width:200px;" onChange="setFormAnchorPoint('e9cba6944a');" title="WOP: [emconf][1][description]"></span></td></tr><tr bgColor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><strong>Category:</strong><BR><a name="b46008f89f"></a><select name="kickstarter[wizArray_upd][emconf][1][category]" onChange="setFormAnchorPoint('b46008f89f');" title="WOP: [emconf][1][category]"><option value=""></option><option value="fe">Frontend</option><option value="plugin" SELECTED>Frontend Plugins</option><option value="be">Backend</option><option value="module">Backend Modules</option><option value="services">Services</option><option value="example">Examples</option><option value="misc">Miscellaneous</option><option value="templates">Templates</option><option value="doc">Documentation</option></select></span></td></tr><tr bgColor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><strong>State</strong><BR><a name="dbd328a5a5"></a><select name="kickstarter[wizArray_upd][emconf][1][state]" onChange="setFormAnchorPoint('dbd328a5a5');" title="WOP: [emconf][1][state]"><option value="alpha" SELECTED>Alpha (Very initial development)</option><option value="beta">Beta (Under current development, should work partly)</option><option value="stable">Stable (Stable and used in production)</option><option value="experimental">Experimental (Nobody knows if this is going anywhere yet...)</option><option value="test">Test (Test extension, demonstrates concepts etc.)</option></select></span></td></tr><tr bgColor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><strong>Dependencies (comma list of extkeys):</strong><BR><a name="ce30f2d5ba"></a><input type="text" name="kickstarter[wizArray_upd][emconf][1][dependencies]" value="" style="width:200px;" onChange="setFormAnchorPoint('ce30f2d5ba');" title="WOP: [emconf][1][dependencies]"></span></td></tr><tr bgColor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><strong>Author Name:</strong><BR><a name="5317cdfcff"></a><input type="text" name="kickstarter[wizArray_upd][emconf][1][author]" value="Metaways" style="width:200px;" onChange="setFormAnchorPoint('5317cdfcff');" title="WOP: [emconf][1][author]"></span></td></tr><tr bgColor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><strong>Author email:</strong><BR><a name="58289f4384"></a><input type="text" name="kickstarter[wizArray_upd][emconf][1][author_email]" value="info@metaways.de" style="width:200px;" onChange="setFormAnchorPoint('58289f4384');" title="WOP: [emconf][1][author_email]"></span></td></tr></table><HR><table border=0 cellpadding=2 cellspacing=2><tr bgColor=""><td><strong><span style="font-family:verdana,arial,sans-serif; font-size:10px;">Frontend Plugins</span></strong></td></tr><tr bgColor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;">Create frontend plugins. Plugins are web applications running on the website itself (not in the backend of TYPO3). The default guestbook, message board, shop, rating feature etc. are examples of plugins.</span></td></tr><tr><td></td></tr><tr bgColor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><strong>Enter a title for the plugin:</strong><BR><a name="c040cc394f"></a><input type="text" name="kickstarter[wizArray_upd][pi][1][title]" value="" style="width:200px;" onChange="setFormAnchorPoint('c040cc394f');" title="WOP: [pi][1][title]"> [English]</span></td></tr><tr bgColor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><a name="51abb93902"></a><input type="hidden" name="kickstarter[wizArray_upd][pi][1][plus_user_obj]" value="0"><input type="checkbox" name="kickstarter[wizArray_upd][pi][1][plus_user_obj]" value="1" onClick="setFormAnchorPoint('51abb93902');" title="WOP: [pi][1][plus_user_obj]">USER cObjects are cached. Make it a non-cached USER_INT instead<BR></span></td></tr><tr bgColor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><a name="69574a69dc"></a><input type="hidden" name="kickstarter[wizArray_upd][pi][1][plus_not_staticTemplate]" value="0"><input type="checkbox" name="kickstarter[wizArray_upd][pi][1][plus_not_staticTemplate]" value="1" onClick="setFormAnchorPoint('69574a69dc');" title="WOP: [pi][1][plus_not_staticTemplate]">Enable this option if you want the TypoScript code to be set by default. Otherwise the code will go into a static template file which must be included in the template record (recommended is to <em>not</em> set this option).<BR></span></td></tr><tr bgColor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><a name="15c9a33e8f"></a><input type="radio" name="kickstarter[wizArray_upd][pi][1][addType]" value="list_type" CHECKED onClick="setFormAnchorPoint('15c9a33e8f');" title="WOP: [pi][1][addType]"><strong>Add to 'Insert Plugin' list in Content Elements</strong><BR><blockquote>Most frontend plugins should be added to the Plugin list of Content Element type 'Insert Plugin'. This is what happens with most other plugins you know of.<BR><img src="../../../../typo3/ext/kickstarter/res/pi_pi.png" width="333" height="293" align="center" vspace=5 border=1 style="border:solid 1px;"><BR><BR><a name="19e5106d54"></a><input type="hidden" name="kickstarter[wizArray_upd][pi][1][plus_wiz]" value="0"><input type="checkbox" name="kickstarter[wizArray_upd][pi][1][plus_wiz]" value="1" CHECKED onClick="setFormAnchorPoint('19e5106d54');" title="WOP: [pi][1][plus_wiz]">Add icon to 'New Content Element' wizard:<BR><img src="../../../../typo3/ext/kickstarter/res/pi_cewiz.png" width="276" height="145" align="center" vspace=5 border=1 style="border:solid 1px;"><BR>Write a description for the entry (if any):<BR><a name="cd406c53b3"></a><input type="text" name="kickstarter[wizArray_upd][pi][1][plus_wiz_description]" value="" style="width:200px;" onChange="setFormAnchorPoint('cd406c53b3');" title="WOP: [pi][1][plus_wiz_description]"> [English]</blockquote></span></td></tr><tr bgColor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><a name="15c9a33e8f"></a><input type="radio" name="kickstarter[wizArray_upd][pi][1][addType]" value="textbox" onClick="setFormAnchorPoint('15c9a33e8f');" title="WOP: [pi][1][addType]"><strong>Add as a 'Textbox' type</strong><BR><blockquote>The Textbox Content Element is not very common but has a confortable set of fields: Bodytext and image upload.<BR><img src="../../../../typo3/ext/kickstarter/res/pi_textbox.png" width="333" height="212" align="center" vspace=5 border=1 style="border:solid 1px;"><BR></blockquote></span></td></tr><tr bgColor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><a name="15c9a33e8f"></a><input type="radio" name="kickstarter[wizArray_upd][pi][1][addType]" value="menu_sitemap" onClick="setFormAnchorPoint('15c9a33e8f');" title="WOP: [pi][1][addType]"><strong>Add as a 'Menu/Sitemap' item</strong><BR><blockquote>Adds the plugin to the Menu/Sitemap list. Use this if your plugin is a list of links to pages or elements on the website. An alternative sitemap? Or some special kind of menu in a special design?<BR><img src="../../../../typo3/ext/kickstarter/res/pi_menu_sitemap.png" width="333" height="245" align="center" vspace=5 border=1 style="border:solid 1px;"><BR></blockquote></span></td></tr><tr bgColor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><a name="15c9a33e8f"></a><input type="radio" name="kickstarter[wizArray_upd][pi][1][addType]" value="ce" onClick="setFormAnchorPoint('15c9a33e8f');" title="WOP: [pi][1][addType]"><strong>Add as a totally new Content Element type</strong><BR><blockquote>You can also take the plunge into a whole new content element type! Scarry eh?<BR><img src="../../../../typo3/ext/kickstarter/res/pi_ce.png" width="333" height="285" align="center" vspace=5 border=1 style="border:solid 1px;"><BR></blockquote></span></td></tr><tr bgColor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><a name="15c9a33e8f"></a><input type="radio" name="kickstarter[wizArray_upd][pi][1][addType]" value="header" onClick="setFormAnchorPoint('15c9a33e8f');" title="WOP: [pi][1][addType]"><strong>Add as a new header type</strong><BR><blockquote>Finally you might insert a new header type here:<BR><img src="../../../../typo3/ext/kickstarter/res/pi_header.png" width="333" height="258" align="center" vspace=5 border=1 style="border:solid 1px;"><BR></blockquote></span></td></tr><tr bgColor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><a name="15c9a33e8f"></a><input type="radio" name="kickstarter[wizArray_upd][pi][1][addType]" value="typotags" onClick="setFormAnchorPoint('15c9a33e8f');" title="WOP: [pi][1][addType]"><strong>Processing of userdefined tag</strong><BR><blockquote>If you wish the plugin to process content from a userdefined tag in Content Element text-fields, enter the tagname here. Eg. if you wish the tags &lt;mytag&gt;This is the content&lt;/mytag&gt; to be your userdefined tags, just enter 'mytag' in this field (lowercase a-z, 0-9 and underscore):<BR><a name="b642236ba9"></a><input type="text" name="kickstarter[wizArray_upd][pi][1][tag_name]" value="" style="width:200px;" onChange="setFormAnchorPoint('b642236ba9');" title="WOP: [pi][1][tag_name]"></blockquote></span></td></tr><tr bgColor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><a name="15c9a33e8f"></a><input type="radio" name="kickstarter[wizArray_upd][pi][1][addType]" value="includeLib" onClick="setFormAnchorPoint('15c9a33e8f');" title="WOP: [pi][1][addType]"><strong>Just include library</strong><BR><blockquote>In this case your library is just included when pages are rendered.<BR><BR><a name="d2fd54b86b"></a><input type="hidden" name="kickstarter[wizArray_upd][pi][1][plus_user_ex]" value="0"><input type="checkbox" name="kickstarter[wizArray_upd][pi][1][plus_user_ex]" value="1" onClick="setFormAnchorPoint('d2fd54b86b');" title="WOP: [pi][1][plus_user_ex]">Provide TypoScript example for USER cObject in 'page.1000'<BR></blockquote></span></td></tr></table>
 </body>
 </html>
