@@ -1,4 +1,6 @@
 (add new changes on top of this file)
+08-03-26 Metaways  <info@metaways.de>
+	* added Tine 2.0 backend & client classes
 
 06-08-03 Metaways  <info@metaways.de>
 
